--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "gatsby": "^1.9.119",
     "gatsby-link": "^1.6.28",
-    "gatsby-plugin-offline": "^1.0.10",
+    "gatsby-plugin-manifest": "^1.0.9",
+    "gatsby-plugin-offline": "^1.0.11",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sass": "^1.0.13",
     "gatsby-source-contentful": "^1.3.23"
