--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "gatsby-plugin-offline": "^1.0.11",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sass": "^1.0.13",
-    "gatsby-source-contentful": "^1.3.23"
+    "gatsby-source-contentful": "^1.3.23",
+    "react-scrollchor": "^4.1.0"
   },
   "keywords": [
     "gatsby"
