--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "gatsby": "^1.9.119",
+    "gatsby-image": "^1.0.35",
     "gatsby-link": "^1.6.28",
+    "gatsby-plugin-catch-links": "^1.0.15",
     "gatsby-plugin-manifest": "^1.0.9",
     "gatsby-plugin-offline": "^1.0.11",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sass": "^1.0.13",
+    "gatsby-plugin-sharp": "^1.6.27",
     "gatsby-source-contentful": "^1.3.23",
+    "gatsby-transformer-remark": "^1.7.31",
     "react-scrollchor": "^4.1.0"
   },
   "keywords": [
