--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "gatsby-image": "^1.0.35",
     "gatsby-link": "^1.6.28",
     "gatsby-plugin-catch-links": "^1.0.15",
-    "gatsby-plugin-manifest": "^1.0.9",
+    "gatsby-plugin-manifest": "^1.0.14",
+    "gatsby-plugin-netlify": "^1.0.18",
+    "gatsby-plugin-offline": "^1.0.14",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sass": "^1.0.13",
     "gatsby-plugin-sharp": "^1.6.27",
