--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-source-contentful": "^1.3.23",
     "gatsby-transformer-remark": "^1.7.31",
     "react-anchor-link-smooth-scroll": "^1.0.5",
+    "react-typist": "^2.0.4",
     "smoothscroll-polyfill": "^0.4.0"
   },
   "keywords": [
