--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-sharp": "^1.6.27",
     "gatsby-source-contentful": "^1.3.23",
     "gatsby-transformer-remark": "^1.7.31",
+    "gatsby-transformer-sharp": "^1.6.22",
     "react-anchor-link-smooth-scroll": "^1.0.5",
     "smoothscroll-polyfill": "^0.4.0"
   },
