--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-source-contentful": "^1.3.23",
     "gatsby-transformer-remark": "^1.7.31",
     "gatsby-transformer-sharp": "^1.6.22",
+    "smooth-scroll": "^12.1.5",
     "smoothscroll-polyfill": "^0.4.0"
   },
   "keywords": [
