--- a/package.json
+++ b/package.json
@@ -4,21 +4,23 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^1.9.207",
-    "gatsby-image": "^1.0.35",
-    "gatsby-link": "^1.6.28",
-    "gatsby-plugin-catch-links": "^1.0.15",
-    "gatsby-plugin-manifest": "^1.0.14",
-    "gatsby-plugin-netlify": "^1.0.18",
-    "gatsby-plugin-offline": "^1.0.14",
-    "gatsby-plugin-react-helmet": "^1.0.8",
-    "gatsby-plugin-sass": "^1.0.13",
-    "gatsby-plugin-sharp": "^1.6.41",
-    "gatsby-source-contentful": "^1.3.37",
-    "gatsby-transformer-remark": "^1.7.31",
-    "gatsby-transformer-sharp": "^1.6.22",
-    "smooth-scroll": "^12.1.5",
-    "smoothscroll-polyfill": "^0.4.0"
+    "gatsby": "next",
+    "gatsby-image": "next",
+    "gatsby-plugin-catch-links": "next",
+    "gatsby-plugin-manifest": "next",
+    "gatsby-plugin-netlify": "next",
+    "gatsby-plugin-nprogress": "next",
+    "gatsby-plugin-offline": "next",
+    "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-sass": "next",
+    "gatsby-plugin-sharp": "next",
+    "gatsby-source-contentful": "next",
+    "gatsby-transformer-remark": "next",
+    "gatsby-transformer-sharp": "next",
+    "node-sass": "^4.9.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-helmet": "^5.2.0"
   },
   "keywords": [
     "gatsby"
@@ -29,7 +31,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
+    "serve": "gatsby serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
