--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^16.4.1",
     "react-anchor-link-smooth-scroll": "^1.0.10",
     "react-dom": "^16.4.1",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "typeface-karla": "0.0.54"
   },
   "keywords": [
     "gatsby"
