adding sessionStorage logic for homepage

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "2.0.0",
   "author": "David Riches <hi@davidrich.es>",
   "dependencies": {
-    "gatsby": "next",
+    "gatsby": "2.0.118",
     "gatsby-image": "next",
     "gatsby-plugin-catch-links": "next",
     "gatsby-plugin-manifest": "next",
@@ -13,8 +13,8 @@
     "gatsby-plugin-offline": "next",
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-sass": "next",
-    "gatsby-plugin-sharp": "next",
-    "gatsby-plugin-sitemap": "^2.0.2",
+    "gatsby-plugin-sharp": "^2.0.20",
+    "gatsby-plugin-sitemap": "next",
     "gatsby-plugin-sri": "^1.0.3",
     "gatsby-source-contentful": "next",
     "gatsby-transformer-remark": "next",
