updating package.json

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "gatsby-plugin-offline": "next",
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-sass": "next",
-    "gatsby-plugin-sharp": "^2.0.20",
-    "gatsby-plugin-sitemap": "next",
+    "gatsby-plugin-sharp": "next",
+    "gatsby-plugin-sitemap": "^2.0.2",
     "gatsby-plugin-sri": "^1.0.3",
     "gatsby-source-contentful": "next",
     "gatsby-transformer-remark": "next",
