--- a/package.json
+++ b/package.json
@@ -4,25 +4,24 @@
   "version": "2.0.0",
   "author": "David Riches <hi@davidrich.es>",
   "dependencies": {
-    "gatsby": "next",
-    "gatsby-image": "next",
-    "gatsby-plugin-catch-links": "next",
-    "gatsby-plugin-manifest": "next",
-    "gatsby-plugin-netlify": "next",
-    "gatsby-plugin-nprogress": "next",
-    "gatsby-plugin-offline": "next",
-    "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-sass": "next",
-    "gatsby-plugin-sharp": "next",
-    "gatsby-plugin-sitemap": "^2.0.2",
-    "gatsby-plugin-sri": "^1.0.3",
-    "gatsby-source-contentful": "next",
-    "gatsby-transformer-remark": "next",
-    "gatsby-transformer-sharp": "next",
+    "gatsby": "^2.1.2",
+    "gatsby-image": "^2.0.29",
+    "gatsby-plugin-catch-links": "^2.0.11",
+    "gatsby-plugin-manifest": "^2.0.17",
+    "gatsby-plugin-netlify": "^2.0.10",
+    "gatsby-plugin-offline": "^2.0.23",
+    "gatsby-plugin-react-helmet": "^3.0.6",
+    "gatsby-plugin-sass": "^2.0.10",
+    "gatsby-plugin-sharp": "^2.0.10",
+    "gatsby-plugin-sitemap": "^2.0.5",
+    "gatsby-plugin-sri": "^1.0.5",
+    "gatsby-source-contentful": "^2.0.29",
+    "gatsby-transformer-remark": "^2.2.5",
+    "gatsby-transformer-sharp": "^2.1.13",
     "node-sass": "^4.9.0",
-    "react": "^16.5.1",
+    "react": "^16.8.2",
     "react-anchor-link-smooth-scroll": "^1.0.11",
-    "react-dom": "^16.5.1",
+    "react-dom": "^16.8.2",
     "react-helmet": "^5.2.0",
     "typeface-karla": "0.0.54",
     "typeface-oswald": "0.0.54"
