--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "2.0.0",
   "author": "David Riches <hi@davidrich.es>",
   "dependencies": {
-    "gatsby": "^2.10.4",
+    "@contentful/rich-text-react-renderer": "^13.2.0",
+    "gatsby": "^2.11.0",
     "gatsby-image": "^2.2.3",
     "gatsby-plugin-catch-links": "^2.1.0",
     "gatsby-plugin-manifest": "^2.2.0",
@@ -15,7 +16,7 @@
     "gatsby-plugin-sharp": "^2.2.1",
     "gatsby-plugin-sitemap": "^2.2.0",
     "gatsby-plugin-sri": "^1.0.8",
-    "gatsby-source-contentful": "^2.1.2",
+    "gatsby-source-contentful": "^2.1.3",
     "gatsby-transformer-remark": "^2.5.0",
     "gatsby-transformer-sharp": "^2.2.0",
     "node-sass": "^4.12.0",
