--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-media": "^1.9.2",
     "typeface-karla": "0.0.54",
     "typeface-oswald": "0.0.54"
   },
