--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-manifest": "^2.2.30",
     "gatsby-plugin-netlify": "^2.1.27",
     "gatsby-plugin-offline": "^2.2.10",
+    "gatsby-plugin-preload-fonts": "^1.0.18",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sass": "^2.1.24",
     "gatsby-plugin-sharp": "^2.3.4",
@@ -38,7 +39,8 @@
     "develop": "gatsby develop",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "serve": "gatsby serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "preload-fonts": "gatsby-preload-fonts"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
