--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "David Riches <hi@davidrich.es>",
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^13.4.0",
+    "aos": "^2.3.4",
     "gatsby": "^2.19.9",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-catch-links": "^2.1.24",
