--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-burger-menu": "^2.6.13",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-media": "^1.10.0",
