--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react": "^16.13.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-burger-menu": "^2.6.13",
-    "react-dom": "^16.13.0",
+    "react-dom": "npm:@hot-loader/react-dom@^16.12.0",
     "react-helmet": "^5.2.1",
     "react-media": "^1.10.0",
     "typeface-karla": "0.0.54",
