updating for incremental builds

--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^13.4.0",
     "aos": "^2.3.4",
-    "gatsby": "^2.20.14",
-    "gatsby-image": "^2.3.2",
-    "gatsby-plugin-catch-links": "^2.2.1",
-    "gatsby-plugin-manifest": "^2.3.3",
-    "gatsby-plugin-netlify": "^2.2.1",
+    "gatsby": "^2.20.31",
+    "gatsby-image": "^2.3.5",
+    "gatsby-plugin-catch-links": "^2.2.4",
+    "gatsby-plugin-manifest": "^2.3.7",
+    "gatsby-plugin-netlify": "^2.2.4",
     "gatsby-plugin-offline": "^2.2.10",
-    "gatsby-plugin-preload-fonts": "^1.1.1",
-    "gatsby-plugin-react-helmet": "^3.2.1",
-    "gatsby-plugin-sass": "^2.2.1",
-    "gatsby-plugin-sharp": "^2.5.4",
-    "gatsby-plugin-sitemap": "^2.3.1",
+    "gatsby-plugin-preload-fonts": "^1.1.4",
+    "gatsby-plugin-react-helmet": "^3.2.5",
+    "gatsby-plugin-sass": "^2.2.4",
+    "gatsby-plugin-sharp": "^2.5.7",
+    "gatsby-plugin-sitemap": "^2.3.6",
     "gatsby-plugin-sri": "^1.1.0",
-    "gatsby-source-contentful": "^2.2.7",
-    "gatsby-transformer-remark": "^2.7.1",
-    "gatsby-transformer-sharp": "^2.4.4",
-    "node-sass": "^4.13.1",
+    "gatsby-source-contentful": "^2.2.10",
+    "gatsby-transformer-remark": "^2.7.5",
+    "gatsby-transformer-sharp": "^2.4.7",
+    "node-sass": "^4.14.0",
     "react": "^16.13.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-burger-menu": "^2.6.13",
@@ -37,7 +37,7 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "build": "gatsby build",
+    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "develop": "gatsby develop",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "serve": "gatsby serve",
