--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby": "^2.20.31",
     "gatsby-image": "^2.3.5",
     "gatsby-plugin-catch-links": "^2.2.4",
+    "gatsby-plugin-google-analytics": "^2.3.1",
     "gatsby-plugin-manifest": "^2.3.7",
     "gatsby-plugin-netlify": "^2.2.4",
     "gatsby-plugin-offline": "^2.2.10",
