--- a/package.json
+++ b/package.json
@@ -5,29 +5,31 @@
   "author": "David Riches <hi@davidrich.es>",
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^13.4.0",
+    "@rhysforyou/gatsby-plugin-react-helmet-async": "^0.1.3",
     "aos": "^2.3.4",
-    "gatsby": "^2.20.31",
-    "gatsby-image": "^2.3.5",
-    "gatsby-plugin-catch-links": "^2.2.4",
-    "gatsby-plugin-google-analytics": "^2.3.1",
-    "gatsby-plugin-manifest": "^2.3.7",
-    "gatsby-plugin-netlify": "^2.2.4",
+    "gatsby": "^2.23.0",
+    "gatsby-image": "^2.4.6",
+    "gatsby-plugin-catch-links": "^2.3.4",
+    "gatsby-plugin-google-analytics": "^2.3.3",
+    "gatsby-plugin-manifest": "^2.4.10",
+    "gatsby-plugin-netlify": "^2.3.4",
     "gatsby-plugin-offline": "^2.2.10",
-    "gatsby-plugin-preload-fonts": "^1.1.4",
-    "gatsby-plugin-react-helmet": "^3.2.5",
-    "gatsby-plugin-sass": "^2.2.4",
-    "gatsby-plugin-sharp": "^2.5.7",
-    "gatsby-plugin-sitemap": "^2.3.6",
+    "gatsby-plugin-preload-fonts": "^1.2.9",
+    "gatsby-plugin-react-helmet": "^3.3.3",
+    "gatsby-plugin-sass": "^2.3.3",
+    "gatsby-plugin-sharp": "^2.6.10",
+    "gatsby-plugin-sitemap": "^2.4.4",
     "gatsby-plugin-sri": "^1.1.0",
-    "gatsby-source-contentful": "^2.2.10",
-    "gatsby-transformer-remark": "^2.7.5",
-    "gatsby-transformer-sharp": "^2.4.7",
-    "node-sass": "^4.14.0",
+    "gatsby-source-contentful": "^2.3.14",
+    "gatsby-transformer-remark": "^2.8.14",
+    "gatsby-transformer-sharp": "^2.5.4",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-burger-menu": "^2.6.13",
+    "react-burger-menu": "^2.6.14",
     "react-dom": "npm:@hot-loader/react-dom@^16.13.0",
     "react-helmet": "^5.2.1",
+    "react-helmet-async": "^1.0.6",
     "react-media": "^1.10.0",
     "typeface-karla": "0.0.54",
     "typeface-oswald": "0.0.54"
