--- a/package.json
+++ b/package.json
@@ -4,35 +4,33 @@
   "version": "2.0.0",
   "author": "David Riches <hi@davidrich.es>",
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^13.4.0",
-    "@rhysforyou/gatsby-plugin-react-helmet-async": "^0.1.3",
+    "@contentful/rich-text-react-renderer": "^14.1.2",
     "aos": "^2.3.4",
-    "gatsby": "^2.32.9",
-    "gatsby-image": "^2.11.0",
-    "gatsby-plugin-catch-links": "^2.10.0",
+    "gatsby": "^3.0.0",
+    "gatsby-image": "^3.0.0",
+    "gatsby-plugin-catch-links": "^3.0.0",
     "gatsby-plugin-dark-mode": "^1.1.2",
-    "gatsby-plugin-google-analytics": "^2.11.0",
-    "gatsby-plugin-manifest": "^2.12.1",
-    "gatsby-plugin-netlify": "^2.11.0",
-    "gatsby-plugin-offline": "^2.2.10",
-    "gatsby-plugin-preload-fonts": "^1.9.1",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sass": "^2.8.0",
-    "gatsby-plugin-sharp": "^2.14.3",
-    "gatsby-plugin-sitemap": "^2.12.0",
+    "gatsby-plugin-google-analytics": "^3.0.0",
+    "gatsby-plugin-manifest": "^3.0.0",
+    "gatsby-plugin-netlify": "^3.0.0",
+    "gatsby-plugin-offline": "^4.0.0",
+    "gatsby-plugin-preload-fonts": "^2.0.0",
+    "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-sass": "^4.0.0",
+    "gatsby-plugin-sharp": "^3.0.0",
+    "gatsby-plugin-sitemap": "^3.0.0",
     "gatsby-plugin-sri": "^1.1.0",
-    "gatsby-source-contentful": "^2.3.56",
-    "gatsby-transformer-remark": "^2.16.1",
-    "gatsby-transformer-sharp": "^2.12.0",
-    "node-sass": "^4.14.1",
-    "react": "^16.14.0",
+    "gatsby-source-contentful": "^5.0.0",
+    "gatsby-transformer-remark": "^3.0.0",
+    "gatsby-transformer-sharp": "^3.0.0",
+    "node-sass": "^5.0.0",
+    "react": "^17.0.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-burger-menu": "^2.9.2",
-    "react-dom": "npm:@hot-loader/react-dom@^16.14.0",
-    "react-helmet": "^5.2.1",
-    "react-helmet-async": "^1.0.8",
+    "react-burger-menu": "^3.0.3",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-media": "^1.10.0",
-    "typeface-karla": "0.0.54",
+    "typeface-karla": "^1.1.13",
     "typeface-oswald": "0.0.54"
   },
   "keywords": [
@@ -49,6 +47,6 @@
     "preload-fonts": "gatsby-preload-fonts"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^2.2.1"
   }
 }
