--- a/package.json
+++ b/package.json
@@ -6,27 +6,28 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "aos": "^2.3.4",
-    "gatsby": "^3.0.1",
+    "gatsby": "^3.0.4",
     "gatsby-image": "^3.0.0",
     "gatsby-plugin-catch-links": "^3.0.0",
     "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-google-analytics": "^3.0.0",
+    "gatsby-plugin-image": "^1.0.1",
     "gatsby-plugin-manifest": "^3.0.0",
     "gatsby-plugin-netlify": "^3.0.0",
     "gatsby-plugin-offline": "^4.0.0",
     "gatsby-plugin-preload-fonts": "^2.0.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
-    "gatsby-plugin-sass": "^4.0.0",
-    "gatsby-plugin-sharp": "^3.0.0",
+    "gatsby-plugin-sass": "^4.0.2",
+    "gatsby-plugin-sharp": "^3.0.1",
     "gatsby-plugin-sitemap": "^3.0.0",
     "gatsby-plugin-sri": "^1.1.0",
-    "gatsby-source-contentful": "^5.0.0",
+    "gatsby-source-contentful": "^5.0.3",
     "gatsby-transformer-remark": "^3.0.0",
     "gatsby-transformer-sharp": "^3.0.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-burger-menu": "^3.0.3",
+    "react-burger-menu": "^3.0.4",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-media": "^1.10.0",
