--- a/package.json
+++ b/package.json
@@ -4,27 +4,27 @@
   "version": "3.0.0",
   "author": "David Riches <hi@davidrich.es>",
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^14.1.3",
+    "@contentful/rich-text-react-renderer": "^15.6.2",
     "aos": "^2.3.4",
-    "gatsby": "^3.10.2",
-    "gatsby-image": "^3.10.0",
-    "gatsby-plugin-catch-links": "^3.10.0",
+    "gatsby": "^4.2.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-catch-links": "^4.2.0",
     "gatsby-plugin-dark-mode": "^1.1.2",
-    "gatsby-plugin-google-analytics": "^3.10.0",
-    "gatsby-plugin-image": "^1.10.1",
-    "gatsby-plugin-manifest": "^3.10.0",
-    "gatsby-plugin-netlify": "^3.10.0",
-    "gatsby-plugin-offline": "^4.10.0",
-    "gatsby-plugin-preload-fonts": "^2.10.0",
-    "gatsby-plugin-react-helmet": "^4.10.0",
-    "gatsby-plugin-sass": "^4.10.0",
-    "gatsby-plugin-sharp": "^3.10.2",
-    "gatsby-plugin-sitemap": "^3.3.0",
+    "gatsby-plugin-google-analytics": "^4.2.0",
+    "gatsby-plugin-image": "^2.2.0",
+    "gatsby-plugin-manifest": "^4.2.0",
+    "gatsby-plugin-netlify": "next",
+    "gatsby-plugin-offline": "^5.2.0",
+    "gatsby-plugin-preload-fonts": "^3.2.0",
+    "gatsby-plugin-react-helmet": "^5.2.0",
+    "gatsby-plugin-sass": "^5.2.0",
+    "gatsby-plugin-sharp": "^4.2.0",
+    "gatsby-plugin-sitemap": "^5.2.0",
     "gatsby-plugin-sri": "^1.1.0",
-    "gatsby-source-contentful": "^5.10.0",
-    "gatsby-transformer-remark": "^3.2.0",
-    "gatsby-transformer-sharp": "^3.10.0",
-    "node-sass": "^5.0.0",
+    "gatsby-source-contentful": "^7.0.0",
+    "gatsby-transformer-remark": "^5.2.0",
+    "gatsby-transformer-sharp": "^4.2.0",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-burger-menu": "^3.0.6",
@@ -48,6 +48,6 @@
     "preload-fonts": "gatsby-preload-fonts"
   },
   "devDependencies": {
-    "prettier": "^2.3.2"
+    "prettier": "^2.4.1"
   }
 }
