--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,6 @@
 [build]
-  publish = "public"
-  command = "gatsby build"
-[build.environment]
-  YARN_VERSION = "1.3.2"
-  YARN_FLAGS = "--no-ignore-optional"
+  command = "npm run build"
+  publish = ".next"
+
 [[plugins]]
-  package = "netlify-plugin-gatsby-cache"
+  package = "@netlify/plugin-nextjs"
