--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aos": "^2.3.4",
     "ipx": "^0.9.4",
     "next": "12.1.0",
+    "next-offline": "^5.0.5",
     "next-themes": "^0.0.15",
     "react": "17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
