--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ipx": "^0.9.4",
     "next": "12.1.0",
     "next-offline": "^5.0.5",
+    "next-pwa": "^5.4.4",
     "next-themes": "^0.0.15",
     "react": "17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
