--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.6.2",
     "aos": "^2.3.4",
-    "gatsby": "^4.2.0",
+    "gatsby": "^5.0.0-next.6",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-catch-links": "^4.2.0",
     "gatsby-plugin-dark-mode": "^1.1.2",
@@ -22,13 +22,13 @@
     "gatsby-plugin-sitemap": "^5.2.0",
     "gatsby-plugin-sri": "^1.1.0",
     "gatsby-source-contentful": "^7.0.0",
-    "gatsby-transformer-remark": "^5.2.0",
-    "gatsby-transformer-sharp": "^4.2.0",
-    "node-sass": "^6.0.1",
-    "react": "^17.0.2",
+    "gatsby-transformer-remark": "^5.24.0",
+    "gatsby-transformer-sharp": "^4.24.0",
+    "node-sass": "^7.0.3",
+    "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-burger-menu": "^3.0.6",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-media": "^1.10.0",
     "typeface-karla": "^1.1.13",
