--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gatsby-plugin-google-analytics": "^4.2.0",
     "gatsby-plugin-image": "^2.2.0",
     "gatsby-plugin-manifest": "^4.2.0",
-    "gatsby-plugin-netlify": "next",
+    "gatsby-plugin-netlify": "^5.0.1",
     "gatsby-plugin-offline": "^5.2.0",
     "gatsby-plugin-preload-fonts": "^3.2.0",
     "gatsby-plugin-react-helmet": "^5.2.0",
@@ -40,7 +40,7 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
+    "build": "gatsby build --log-pages",
     "develop": "gatsby develop",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "serve": "gatsby serve",
