--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.6.2",
     "aos": "^2.3.4",
-    "gatsby": "^4.24.4",
+    "gatsby": "^4.2.0",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-catch-links": "^4.2.0",
     "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-google-analytics": "^4.2.0",
     "gatsby-plugin-image": "^2.2.0",
     "gatsby-plugin-manifest": "^4.2.0",
-    "gatsby-plugin-netlify": "^5.0.1",
+    "gatsby-plugin-netlify": "next",
     "gatsby-plugin-offline": "^5.2.0",
     "gatsby-plugin-preload-fonts": "^3.2.0",
     "gatsby-plugin-react-helmet": "^5.2.0",
@@ -22,9 +22,9 @@
     "gatsby-plugin-sitemap": "^5.2.0",
     "gatsby-plugin-sri": "^1.1.0",
     "gatsby-source-contentful": "^7.0.0",
-    "gatsby-transformer-remark": "^5.24.0",
-    "gatsby-transformer-sharp": "^4.24.0",
-    "node-sass": "^7.0.3",
+    "gatsby-transformer-remark": "^5.2.0",
+    "gatsby-transformer-sharp": "^4.2.0",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-burger-menu": "^3.0.6",
@@ -40,7 +40,7 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "build": "gatsby build --log-pages",
+    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "develop": "gatsby develop",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "serve": "gatsby serve",
