--- a/package.json
+++ b/package.json
@@ -4,33 +4,41 @@
   "version": "3.0.0",
   "author": "David Riches <hi@davidrich.es>",
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^15.6.2",
+    "@contentful/rich-text-react-renderer": "^15.12.1",
+    "@skagami/gatsby-plugin-dark-mode": "^2.0.0",
+    "anser": "^2.1.1",
     "aos": "^2.3.4",
-    "gatsby": "^4.2.0",
-    "gatsby-image": "^3.11.0",
-    "gatsby-plugin-catch-links": "^4.2.0",
-    "gatsby-plugin-dark-mode": "^1.1.2",
-    "gatsby-plugin-google-analytics": "^4.2.0",
-    "gatsby-plugin-image": "^2.2.0",
-    "gatsby-plugin-manifest": "^4.2.0",
-    "gatsby-plugin-netlify": "next",
-    "gatsby-plugin-offline": "^5.2.0",
-    "gatsby-plugin-preload-fonts": "^3.2.0",
-    "gatsby-plugin-react-helmet": "^5.2.0",
-    "gatsby-plugin-sass": "^5.2.0",
-    "gatsby-plugin-sharp": "^4.2.0",
-    "gatsby-plugin-sitemap": "^5.2.0",
+    "css.escape": "^1.5.1",
+    "error-stack-parser": "^2.1.4",
+    "gatsby": "^5.1.0",
+    "gatsby-link": "^5.1.0",
+    "gatsby-plugin-catch-links": "^5.1.0",
+    "gatsby-plugin-google-analytics": "^5.1.0",
+    "gatsby-plugin-image": "^3.1.0",
+    "gatsby-plugin-manifest": "^5.1.0",
+    "gatsby-plugin-offline": "^6.1.0",
+    "gatsby-plugin-preload-fonts": "^4.1.0",
+    "gatsby-plugin-react-helmet": "^6.1.0",
+    "gatsby-plugin-sass": "^6.1.0",
+    "gatsby-plugin-sharp": "^5.1.0",
+    "gatsby-plugin-sitemap": "^6.1.0",
     "gatsby-plugin-sri": "^1.1.0",
-    "gatsby-source-contentful": "^7.0.0",
-    "gatsby-transformer-remark": "^5.2.0",
-    "gatsby-transformer-sharp": "^4.2.0",
-    "node-sass": "^6.0.1",
-    "react": "^17.0.2",
+    "gatsby-react-router-scroll": "^6.1.0",
+    "gatsby-script": "^2.1.0",
+    "gatsby-source-contentful": "^8.1.0",
+    "gatsby-transformer-remark": "^6.1.0",
+    "gatsby-transformer-sharp": "^5.1.0",
+    "mitt": "^3.0.0",
+    "node-sass": "^8.0.0",
+    "platform": "^1.3.6",
+    "query-string": "^7.1.1",
+    "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-burger-menu": "^3.0.6",
-    "react-dom": "^17.0.2",
+    "react-burger-menu": "^3.0.8",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-media": "^1.10.0",
+    "shallow-compare": "^1.2.2",
     "typeface-karla": "^1.1.13",
     "typeface-oswald": "^1.1.13"
   },
@@ -48,6 +56,6 @@
     "preload-fonts": "gatsby-preload-fonts"
   },
   "devDependencies": {
-    "prettier": "^2.4.1"
+    "prettier": "^2.8.0"
   }
 }
