--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "version": "3.0.0",
   "author": "David Riches <hi@davidrich.es>",
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^15.12.1",
+    "@contentful/rich-text-react-renderer": "^15.16.3",
     "@skagami/gatsby-plugin-dark-mode": "^2.0.0",
     "anser": "^2.1.1",
     "aos": "^2.3.4",
     "css.escape": "^1.5.1",
+    "date-fns": "^2.29.3",
     "error-stack-parser": "^2.1.4",
     "gatsby": "^5.1.0",
     "gatsby-link": "^5.1.0",
@@ -25,13 +26,13 @@
     "gatsby-plugin-sri": "^1.1.0",
     "gatsby-react-router-scroll": "^6.1.0",
     "gatsby-script": "^2.1.0",
-    "gatsby-source-contentful": "^8.1.0",
+    "gatsby-source-contentful": "^8.8.0",
     "gatsby-transformer-remark": "^6.1.0",
     "gatsby-transformer-sharp": "^5.1.0",
     "mitt": "^3.0.0",
     "node-sass": "^8.0.0",
     "platform": "^1.3.6",
-    "query-string": "^7.1.1",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-burger-menu": "^3.0.8",
