--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "error-stack-parser": "^2.1.4",
     "gatsby": "^5.1.0",
     "gatsby-link": "^5.1.0",
+    "gatsby-plugin-breakpoints": "^1.3.9",
     "gatsby-plugin-catch-links": "^5.1.0",
     "gatsby-plugin-google-analytics": "^5.1.0",
     "gatsby-plugin-image": "^3.1.0",
@@ -58,5 +59,10 @@
   },
   "devDependencies": {
     "prettier": "^2.8.0"
+  },
+  "overrides": {
+    "gatsby-plugin-breakpoints": {
+      "gatsby": "^2.0.0 || ^3.0.0 || ^4.0.0 || ^5.0.0"
+    }
   }
 }
