--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-google-analytics": "^5.1.0",
     "gatsby-plugin-image": "^3.1.0",
     "gatsby-plugin-manifest": "^5.1.0",
+    "gatsby-plugin-netlify": "^5.1.0",
     "gatsby-plugin-offline": "^6.1.0",
     "gatsby-plugin-preload-fonts": "^4.1.0",
     "gatsby-plugin-react-helmet": "^6.1.0",
