--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-netlify": "^5.1.0",
     "gatsby-plugin-offline": "^6.1.0",
     "gatsby-plugin-preload-fonts": "^4.1.0",
+    "gatsby-plugin-purgecss": "^6.2.1",
     "gatsby-plugin-react-helmet": "^6.1.0",
     "gatsby-plugin-sass": "^6.1.0",
     "gatsby-plugin-sharp": "^5.1.0",
