--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "date-fns": "^2.29.3",
     "error-stack-parser": "^2.1.4",
     "gatsby": "^5.1.0",
+    "gatsby-adapter-netlify": "^1.1.7",
     "gatsby-link": "^5.1.0",
     "gatsby-plugin-breakpoints": "^1.3.9",
     "gatsby-plugin-catch-links": "^5.1.0",
     "gatsby-plugin-google-analytics": "^5.1.0",
     "gatsby-plugin-image": "^3.1.0",
     "gatsby-plugin-manifest": "^5.1.0",
-    "gatsby-plugin-netlify": "^5.1.0",
     "gatsby-plugin-offline": "^6.1.0",
     "gatsby-plugin-preload-fonts": "^4.1.0",
     "gatsby-plugin-purgecss": "^6.2.1",
@@ -52,7 +52,7 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
+    "build": "gatsby build --log-pages",
     "develop": "gatsby develop",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "serve": "gatsby serve",
