--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "css.escape": "^1.5.1",
     "date-fns": "^2.29.3",
     "error-stack-parser": "^2.1.4",
-    "gatsby": "^5.1.0",
+    "gatsby": "^5.13.7",
     "gatsby-adapter-netlify": "^1.1.7",
     "gatsby-link": "^5.1.0",
     "gatsby-plugin-breakpoints": "^1.3.9",
@@ -22,6 +22,7 @@
     "gatsby-plugin-offline": "^6.1.0",
     "gatsby-plugin-preload-fonts": "^4.1.0",
     "gatsby-plugin-react-helmet": "^6.1.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sass": "^6.1.0",
     "gatsby-plugin-sharp": "^5.1.0",
     "gatsby-plugin-sitemap": "^6.1.0",
