--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "3.0.0",
   "author": "David Riches <hi@davidrich.es>",
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^15.16.3",
+    "@contentful/rich-text-react-renderer": "^15.22.10",
     "@skagami/gatsby-plugin-dark-mode": "^2.0.0",
     "anser": "^2.1.1",
     "aos": "^2.3.4",
@@ -19,7 +19,7 @@
     "gatsby-plugin-google-analytics": "^5.1.0",
     "gatsby-plugin-image": "^3.1.0",
     "gatsby-plugin-manifest": "^5.1.0",
-    "gatsby-plugin-offline": "^6.1.0",
+    "gatsby-plugin-offline": "^6.13.3",
     "gatsby-plugin-preload-fonts": "^4.1.0",
     "gatsby-plugin-react-helmet": "^6.1.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
@@ -60,6 +60,7 @@
     "preload-fonts": "gatsby-preload-fonts"
   },
   "devDependencies": {
+    "ajv": "^7.2.4",
     "prettier": "^2.8.0"
   },
   "overrides": {
