--- a/package.json
+++ b/package.json
@@ -8,19 +8,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.19.0",
     "aos": "^2.3.4",
     "ipx": "^0.9.4",
-    "next-themes": "^0.0.15",
-    "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-markdown": "^8.0.0",
-    "sass": "^1.49.7",
-    "@contentful/rich-text-react-renderer": "^15.19.0",
     "next": "15.1.0",
+    "next-pwa": "^5.6.0",
+    "next-themes": "^0.0.15",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-dom": "19.0.0",
+    "react-markdown": "^8.0.0",
+    "sass": "^1.49.7"
   },
   "devDependencies": {
+    "@types/react": "19.0.1",
     "eslint": "8.9.0",
-    "eslint-config-next": "15.1.0"
+    "eslint-config-next": "15.1.0",
+    "typescript": "5.7.2"
   }
 }
