--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "19.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "19.0.0",
+    "react-icons": "^5.4.0",
     "react-markdown": "^8.0.0",
     "sass": "^1.49.7"
   },
