--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "next": "15.1.0",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.0.15",
-    "react": "19.0.0",
+    "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "19.0.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-markdown": "^8.0.0",
     "sass": "^1.49.7"
   },
   "devDependencies": {
-    "@types/react": "19.0.1",
+    "@types/react": "^18.0.28",
     "eslint": "8.9.0",
     "eslint-config-next": "15.1.0",
     "typescript": "5.7.2"
