--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-15-contentful",
+  "name": "next-16-contentful",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -9,23 +9,26 @@
   },
   "dependencies": {
     "@contentful/rich-text-plain-text-renderer": "^17.0.0",
-    "@contentful/rich-text-react-renderer": "^15.19.0",
+    "@contentful/rich-text-react-renderer": "^16.1.6",
     "aos": "^2.3.4",
     "ipx": "^3.1.1",
-    "next": "15.5.2",
+    "next": "16.1.1",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.0.15",
-    "react": "19.0.0",
+    "react": "19.2.3",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "19.0.0",
+    "react-dom": "19.2.3",
     "react-icons": "^5.4.0",
     "react-markdown": "^8.0.0",
     "sass": "^1.49.7"
   },
   "devDependencies": {
-    "@types/react": "19.0.1",
+    "@types/react": "19.2.7",
     "eslint": "8.9.0",
-    "eslint-config-next": "15.1.0",
+    "eslint-config-next": "16.1.1",
     "typescript": "5.7.2"
+  },
+  "overrides": {
+    "@types/react": "19.2.7"
   }
 }
