--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "plaiceholder": "^3.0.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "sass": "^1.49.7",
     "sharp": "^0.34.5"
