--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@contentful/rich-text-plain-text-renderer": "^17.0.0",
     "@contentful/rich-text-react-renderer": "^16.1.6",
+    "@tailwindcss/postcss": "^4.1.18",
     "ipx": "^3.1.1",
     "next": "16.1.1",
     "next-pwa": "^5.6.0",
@@ -19,8 +20,8 @@
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
-    "sass": "^1.49.7",
-    "sharp": "^0.34.5"
+    "sharp": "^0.34.5",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@types/react": "19.2.7",
